# windows-fido-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
cbor/: CMakeLists.txt
cbor/include/windows_fido_bridge/: cbor.hpp
cbor/include/windows_fido_bridge/cbor/: detail.hpp  dump.hpp  types.hpp
cbor/include/windows_fido_bridge/cbor/types/: array.hpp  integer.hpp  map.hpp  string.hpp  value.hpp
cbor/src/: detail.cpp  parse.cpp
cbor/src/types/: array.cpp  value.cpp
cbor/test/: test_cbor.cpp  test_integer.cpp  test_string.cpp  test_value.cpp
cmake/: BuildFmt.cmake  BuildGoogleTest.cmake  BuildMingwStdThreads.cmake  BuildSpdlog.cmake  DetectWSL.cmake  Findfmt.cmake  Util.cmake  toolchain-mingw64.cmake
common/: CMakeLists.txt
common/include/windows_fido_bridge/: base64.hpp  binary_io.hpp  communication.hpp  exceptions.hpp  format.hpp  types.hpp  util.hpp
common/src/: base64.cpp  communication.cpp  exceptions.cpp
linux_client/: CMakeLists.txt
linux_client/src/: binary_io.hpp  bridge.cpp  bridge.hpp  cbor.cpp  cbor.hpp  linux_client.cpp  posix_pipe.hpp  scratch.cpp  util.cpp  util.hpp  webauthn.cpp  webauthn.hpp
linux_client/test/: test_cbor.cpp
openssh-client/: .dockerignore  Dockerfile
openssh-client/etc/apt/sources.list.d/: bullseye-src.list
openssh-client/openssh-client/: build-package
openssh-client/openssh-client/patches/: 001-sk-api.patch  002-sk-dummy.patch  003-sha2.patch
package/deb/: copyright  version-selection-shim-copyright
package/deb/skapi/: description.template
package/deb/version-selection-shim/: description
repo/: build-repo-packages
repo/image/: Dockerfile
src/cbor/: CMakeLists.txt
src/cbor/include/windows_fido_bridge/cbor/: detail.hpp
src/cbor/include/windows_fido_bridge/cbor/types/: array.hpp  map.hpp
src/common/: CMakeLists.txt
src/common/include/windows_fido_bridge/: binary_io.hpp  cbor.hpp  exceptions.hpp  format.hpp  openssh.hpp  types.hpp  util.hpp
src/common/include/windows_fido_bridge/cbor/: detail.hpp  dump.hpp  parse.hpp  parse_fwd.hpp
src/common/include/windows_fido_bridge/cbor/types/: array.hpp  integer.hpp  map.hpp  null.hpp  string.hpp  value.hpp
src/common/src/: communication.cpp  exceptions.cpp  openssh.cpp  util.cpp
src/common/src/cbor/: detail.cpp  parse.cpp
src/common/src/cbor/types/: array.cpp  integer.cpp  null.cpp  value.cpp
src/common/test/: test_array.cpp  test_integer.cpp  test_map.cpp  test_value.cpp
src/linux/: CMakeLists.txt
src/linux/src/: bridge.cpp  linux_client.cpp  openssh_sk_middleware.cpp  posix_pipe.cpp  posix_pipe.hpp  webauthn.cpp  webauthn.hpp
src/linux_middleware/: CMakeLists.txt
src/linux_middleware/src/: bridge.cpp  bridge.hpp  dll_entry_points.cpp  posix_pipe.cpp
src/win32_middleware_common/: CMakeLists.txt
src/win32_middleware_common/include/windows_fido_bridge/: openssh_sk_middleware.hpp  windows_error.hpp  windows_fwd.hpp  windows_util.hpp
src/win32_middleware_common/src/: openssh_sk_middleware.cpp  undocumented_microsoft_webauthn.hpp  webauthn.cpp  webauthn.hpp  window.cpp  window.hpp  windows_error.cpp  windows_util.cpp
src/win32_middleware_exe/: CMakeLists.txt
src/win32_middleware_exe/src/: main.cpp
src/win32_middleware_lib/: CMakeLists.txt
src/win32_middleware_lib/src/: dll_entry_points.cpp
src/windows/: CMakeLists.txt
src/windows/src/: main.cpp  webauthn_linking.cpp  webauthn_linking.hpp  window.cpp  window.hpp  windows_error.cpp  windows_error.hpp  windows_fwd.hpp  windows_server.cpp  windows_util.cpp  windows_util.hpp
windows_server/: CMakeLists.txt  webauthn.h  win32.cpp  windows_server.cpp
windows_server/src/: windows_error.cpp  windows_error.hpp  windows_server.cpp
